--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: network_resource
 description: Automatically cache network resources and use them when offline.
-version: 0.0.1
+version: 0.0.2
 author: Jacob Phillips <jifalops@gmail.com>
 homepage: https://github.com/jifalops/network_resource
 
@@ -8,6 +8,7 @@ dependencies:
   flutter:
     sdk: flutter
   path_provider: "^0.4.0"
+  http: "^0.11.3+16"
 
 dev_dependencies:
   flutter_test:
