--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,19 +1,15 @@
 name: network_resource
 description: Automatically cache network resources and use them when offline.
-version: 0.1.0
+version: 0.2.0
 author: Jacob Phillips <jifalops@gmail.com>
 homepage: https://github.com/jifalops/network_resource
 
 dependencies:
-  flutter:
-    sdk: flutter
-  path_provider: "^0.4.0"
   http: "^0.11.3+16"
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
+  mockito: "^3.0.0-beta+3"
+  test: "^1.3.0"
 
 environment:
   sdk: ">=1.19.0 <2.0.0"
-  flutter: ">=0.1.2 <1.0.0"
