--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,11 +5,13 @@ author: Jacob Phillips <jifalops@gmail.com>
 homepage: https://github.com/jifalops/network_resource
 
 dependencies:
-  http: "^0.11.3+16"
+  http: ^0.11.3+16
+  meta: ^1.1.6
+  path: ^1.6.2
 
 dev_dependencies:
-  mockito: "^3.0.0-beta+3"
-  test: "^1.3.0"
+  mockito: ^3.0.0-beta+3
+  test: ^1.3.0
 
 environment:
-  sdk: ">=1.19.0 <2.0.0"
+  sdk: ">=1.19.0 <3.0.0"
